--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,8 @@ dependencies:
   google_fonts: ^2.1.0
   shared_preferences: ^2.0.6
   circular_profile_avatar: ^2.0.0
+  asset_cache: ^1.0.0+1
+  flutter_spinkit: "^4.1.2"
 
 dev_dependencies:
   flutter_test:
@@ -51,6 +53,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+    - images/
     - images/profile_pic.jpg
     - images/rightimage.jpg
     - images/profile_pic.jpg
